# kaggle-comp-nvidia-nemotron

./: .gitignore  CLAUDE.md  NEXT_TASK.md  README.md  Taskfile.yml  pyproject.toml
docs/: evaluation.md  official-demo.md  overview.md  prizes.md  rules.md  submission.md  timeline.md
kaggle-notebook/: kernel-metadata.json  notebook.py
logs/: 20260322_112951.json  experiments.csv
outputs/lora_adapter/: adapter_config.json
scripts/: predict.py  train.py
src/: config.py  dataset.py  evaluate.py  features.py  model.py  submit.py  utils.py
tests/: test_config.py  test_dataset.py  test_evaluate.py  test_features.py  test_model.py  test_submit.py  test_utils.py
